refactor: Make VectorStore a Bean